added viewport as instructed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Neighborhood Map</title>
+
+        <meta name="viewport" content="width=800, intitial-scale=1">
+
         <link rel="stylesheet" href="css/style.css">
         <!------ getting some style elements from w3schools ------>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
