now using dom listener for map resize

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
         </head>
-        <body data-bind="event: {resize: view.render}">
+        <body>
 
             <div id="actionPane" class="w3-container">
 
