--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           <div id="map" class="rightMap" zclass="w3-container"></div>
 
 
-          <script src="js/libs/jquery.min.js"></script>
+          <script src="js/libs/jquery-3.3.1.min.js"></script>
           <script src="js/libs/knockout-3.2.0.js"></script>
           <script src="js/app.js"></script>
 
           <script async defer
-               src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyDCiCbk_jLIFqlH2s1gmzdIehfkP7JkTVU&v=3&callback=viewmodel.initializeMap">
+               src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyDCiCbk_jLIFqlH2s1gmzdIehfkP7JkTVU&v=3&callback=viewmodel.initializeMap" onerror="view.googleMapError()">
           </script>
      </body>
 </html>
