now completely functinoal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Neighborhood Map</title>
 
-        <meta name="viewport" content="width=800, intitial-scale=1">
+        <meta name="viewport" content="width=800, initial-scale=1">
 
         <link rel="stylesheet" href="css/style.css">
         <!------ getting some style elements from w3schools ------>
